[package]
name = "lore_sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
