[package]
name = "lore_sharing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
http = "1.3.1"
crc32fast = "1.4.2"
uuid = { version = "1.17.0", features = [ "v4" ]}

[build-dependencies]
dotenv = "0.15"      # or dotenvy = "0.15.7"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

# [[bin]]
# name = "populate"
# path = "src/bin/populate.rs"
